package com.example.program.Model;

public interface Entity {
    public String toString();
}
